--- a/src/components/styles/farmover1.css
+++ b/src/components/styles/farmover1.css
@@ -428,6 +428,47 @@
 .horizontal-menu{
     display: none;
 }
+@media screen and (max-width: 1485px){
+    .farm-main-div{
+        height: 890px;
+    }
+    .gold{
+        position: absolute;
+        left: 53%;
+        top: 59%;
+    }
+    .silver{
+        position: absolute;
+        left: 53%;
+        top: 68%;
+    }
+    .bronze{
+        position: absolute;
+        left: 53%;
+        top: 78%;
+    }
+    .lucky-draw-bottom-subtitle{
+        position: absolute;
+        font-size: 8px;
+        top:91%;
+        left:15%;
+        color: white;
+        letter-spacing: 1px;
+        font-weight: 200;
+    }
+    .lucky-draw-button{
+        width: 210px;
+        height: 30px;
+        cursor: pointer;
+        border-radius: 10px;
+        border: none;
+        color: white;
+        font-size: 12px;
+        font-weight: 400;
+        letter-spacing: 0.1em;
+        background-color: #17A40B;
+    }
+}
 @media screen and (max-width: 420px){
     .farm-main-div{
         height: 1000px;
@@ -614,5 +655,66 @@
     }
     .gauge-icon-div1{
         height: 12%;
+    }
+}
+
+@media screen and (min-width: 2555px){
+    .lucky-draw-top-image-div{
+        position: absolute;
+        top: 14%;
+        left: 85%;
+    }
+    .gold{
+        position: absolute;
+        left: 53%;
+        top: 61%;
+    }
+    .silver{
+        position: absolute;
+        left: 53%;
+        top: 71%;
+    }
+    .bronze{
+        position: absolute;
+        left: 53%;
+        top: 81%;
+    }
+    .lucky-draw-bottom-subtitle{
+        position: absolute;
+        font-size: 10px;
+        top:85%;
+        left:15%;
+        color: white;
+        letter-spacing: 1px;
+        font-weight: 200;
+    }
+    .calender{
+        margin-top: 15%;
+    }
+    .lucky-draw-bottom-div-right-title{
+        color: white;
+        font-size: 12px;
+        font-weight: 200;
+        margin-top: 5%;
+    }
+    .lucky-draw-top-div-value{
+        color: white;
+        font-size: 18px;
+        font-weight: 500;
+        position: absolute;
+        top: 25%;
+        left: 58%;
+    }
+    .lucky-draw-button{
+        width: 360px;
+        height: 30px;
+        cursor: pointer;
+        border-radius: 10px;
+        border: none;
+        color: white;
+        font-size: 12px;
+        font-weight: 400;
+        letter-spacing: 0.1em;
+        background-color: #17A40B;
     }
 }
